--- a/package.json
+++ b/package.json
@@ -61,6 +61,12 @@
         "icon": "$(arrow-down)"
       },
       {
+        "command": "rgss-script-editor.importScripts",
+        "title": "Import Scripts From Bundle File",
+        "category": "RGSS Script Editor",
+        "icon": "$(file-add)"
+      },
+      {
         "command": "rgss-script-editor.createScriptLoader",
         "title": "Create Script Loader",
         "category": "RGSS Script Editor",
@@ -188,6 +194,12 @@
             "default": "auto",
             "description": "Choose the type of end of line that the extension will use for files.",
             "order": 12
+          },
+          "rgssScriptEditor.extension.importScriptsOverwrite": {
+            "type": "boolean",
+            "default": false,
+            "description": "Whether to overwrite existing scripts or not when importing a scripts bundle file.",
+            "order": 13
           },
           "rgssScriptEditor.external.backUpsFolder": {
             "type": "string",
@@ -382,6 +394,11 @@
           "command": "rgss-script-editor.createSelectedBundleFile",
           "when": "view == rgss-script-editor.editorView",
           "group": "4"
+        },
+        {
+          "command": "rgss-script-editor.importScripts",
+          "when": "view == rgss-script-editor.editorView",
+          "group": "5"
         }
       ],
       "view/item/context": [
